<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ssii.nogeolingo.Account.SignUpActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/convergence"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryText"
            android:hint="@string/hint_email" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/hint_password" />

        <EditText
            android:id="@+id/ageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:fontFamily="@font/convergence"
            android:inputType="number"
            android:hint="@string/hint_age" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/convergence"
            android:text="@string/info_text_genre" />

        <RadioGroup
            android:id="@+id/genreRadioButtonGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="4dp">

            <RadioButton
                android:id="@+id/femRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/convergence"
                android:onClick="onRadioButtonClicked"
                android:text="@string/f_genre" />

            <RadioButton
                android:id="@+id/masRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/convergence"
                android:onClick="onRadioButtonClicked"
                android:text="@string/m_genre" />
        </RadioGroup>

        <Button
            android:id="@+id/signUpbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/blackbuttondesign"
            android:fontFamily="@font/convergence"
            android:text="@string/register_button_text" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
